--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ target_include_directories(OptionType INTERFACE ${CMAKE_SOURCE_DIR})
 add_library(BinomialTreeLib BinomialTree.cpp)
 target_link_libraries(BinomialTreeLib PRIVATE OptionType)
 
-# Build main executable
+# Create TrinomialTree library (which depends on BinomialTree)
+add_library(TrinomialTreeLib TrinomialTree.cpp)
+target_link_libraries(TrinomialTreeLib PRIVATE BinomialTreeLib)
+
+# Create main executable (links both libraries)
 add_executable(main main.cpp)
-target_link_libraries(main PRIVATE BinomialTreeLib)
+target_link_libraries(main PRIVATE BinomialTreeLib TrinomialTreeLib)
