--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,25 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_library(OptionType INTERFACE)
 target_include_directories(OptionType INTERFACE ${CMAKE_SOURCE_DIR})
 
+# Create util library (for norm_cdf and other utility functions)
+add_library(UtilLib util.cpp)
+
+# Create BSM Library
+add_library(BSMLib BSM.cpp)
+target_link_libraries(BSMLib PRIVATE OptionType UtilLib)
+
+# Create BarrierBSM Library
+add_library(BarrierBSMLib BarrierBSM.cpp)
+target_link_libraries(BarrierBSMLib PRIVATE BSMLib UtilLib)
+
 # Create BinomialTree library
 add_library(BinomialTreeLib BinomialTree.cpp)
-target_link_libraries(BinomialTreeLib PRIVATE OptionType)
+target_link_libraries(BinomialTreeLib PRIVATE OptionType UtilLib)
 
 # Create TrinomialTree library (which depends on BinomialTree)
 add_library(TrinomialTreeLib TrinomialTree.cpp)
-target_link_libraries(TrinomialTreeLib PRIVATE BinomialTreeLib)
+target_link_libraries(TrinomialTreeLib PRIVATE BinomialTreeLib UtilLib)
 
-# Create main executable (links both libraries)
+# Create main executable
 add_executable(main main.cpp)
-target_link_libraries(main PRIVATE BinomialTreeLib TrinomialTreeLib)
+target_link_libraries(main PRIVATE BinomialTreeLib TrinomialTreeLib BSMLib BarrierBSMLib UtilLib)
